--- a/VisualStudio/VS/style/index.css
+++ b/VisualStudio/VS/style/index.css
@@ -51,13 +51,13 @@
   border-color:#000000;
   float:left;
   background-color:White;
-  display: none;
     }
     
  .imgCol
 { width:150px;
   height:150px;
   margin:30px 25px 10px 25px;
+  border:0px;
 }
 
 .captcha
@@ -76,4 +76,56 @@
 {
     margin-left: 20px;
     font-size:18px;
+    }
+    
+.boton{
+        font-size:16px;
+        font-family:Verdana,Helvetica;
+        font-weight:bold;
+        color:white;
+        background:#638cb5;
+        border:0px;
+        width:100px;
+        height:39px;
+       }
+.description
+ {  font:18px arial,helvetica,sans-serif; 
+    color: #04046a;
+    margin:20px;
+	float:left;
+	width:600px;
+	height:200px;
+     }
+
+ .imgDescription
+ {  width:300px;
+    height:300px;
+    margin:50px 25px 10px 25px;
+    border:0px;
+        }
+ .title 
+{   display:block;
+	font: 32px arial,helvetica,sans-serif; 
+	color: #04046a;
+	margin-top:10%;		
+	margin-bottom:0.4%;
+	text-align:center;
+		}
+			
+.controlers
+{   width:520px;
+    float:left;
+    margin:20px;
+		}
+		
+.division{ float:left;} 
+.precio
+{ float:left;
+  width:600px;
+  font-weight:bold;
+  font-size:16px;
+    }
+
+.back
+{border: 0px;
     }
